--- a/src/Layout/layout.css
+++ b/src/Layout/layout.css
@@ -1,3 +1,8 @@
+:root {
+ --bg-color--light: #ffffff;
+ --bg-color--dark: #000000;
+}
+
 body {
   margin: 0;
 }
@@ -7,6 +12,12 @@ img {
 }
 
 .main-screen {
-  width: 100%;
+  width: 100vw;
+  min-height: 100vh;
+}
+
+.main-container {
+  background-color: var(--bg-color--light);
+  color: var(--bg-color--dark);
   margin-top: 2rem;
 }
