--- a/src/Layout/Navbar/navbar.css
+++ b/src/Layout/Navbar/navbar.css
@@ -1,8 +1,3 @@
 .navbar__container {
-  position: fixed;
-  background-color: white;
-  top: 0;
-  width: 100%;
-  min-height: 2rem;
-  border-bottom: .1em solid black;
+  margin-right: 1rem;
 }
