--- a/src/Layout/home-page/home-page.css
+++ b/src/Layout/home-page/home-page.css
@@ -1,3 +1,8 @@
-/* .home-page__container {
+.home-page__container {
+  width: 100%;
+}
 
-} */
+.home-page__demo-images {
+  margin: 0 auto;
+  width: fit-content;
+}
