--- a/src/Layout/Navbar/navbar.css
+++ b/src/Layout/Navbar/navbar.css
@@ -1,4 +1,27 @@
 .navbar__container {
-  margin-right: 1rem;
-  height: fit-content;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+.navbar__buttons-wrapper {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.navbar__button {
+  text-transform: uppercase;
+  padding: .5em 1em;
+  cursor: pointer;
+}
+.navbar__button:hover {
+  background-color: var(--div-color--dark);
+  color: white;
+}
+.navbar__button.dark:hover {
+  background-color: var(--div-color--light);
+  color: var(--bg-color--dark);
 }
