--- a/src/Layout/components/LightSwitchButton/lightSwitchButton.css
+++ b/src/Layout/components/LightSwitchButton/lightSwitchButton.css
@@ -1,6 +1,16 @@
 .lightSwitch {
-  position: absolute;
-  right: 1.5rem;
-  top: 1.8rem;
+  aspect-ratio: 1/1;
   height: fit-content;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  right: 0;
+  border: 2px solid black;
+  background-color: white;
+  color: black;
+}
+.lightSwitch.dark {
+  border: 2px solid white;
+  background-color: black;
+  color: white;
 }
