--- a/src/Layout/components/LightSwitchButton/lightSwitchButton.css
+++ b/src/Layout/components/LightSwitchButton/lightSwitchButton.css
@@ -6,11 +6,11 @@
   position: relative;
   right: 0;
   border: 2px solid black;
-  background-color: white;
-  color: black;
+  background-color: var(--div-color--light);
+  color: var(--font-color--light-dark);
 }
 .lightSwitch.dark {
   border: 2px solid white;
-  background-color: black;
-  color: white;
+  background-color: var(--bg-color--dark);
+  color: var(--font-color--dark-light);
 }
