--- a/src/Layout/components/LightSwitchButton/lightSwitchButton.css
+++ b/src/Layout/components/LightSwitchButton/lightSwitchButton.css
@@ -5,12 +5,12 @@
   cursor: pointer;
   position: relative;
   right: 0;
-  border: 2px solid black;
+  border: 1px solid black;
   background-color: var(--div-color--light);
-  color: var(--font-color--light-dark);
+  color: var(--font-color--light);
 }
 .lightSwitch.dark {
-  border: 2px solid white;
+  border-color: white;
   background-color: var(--bg-color--dark);
-  color: var(--font-color--dark-light);
+  color: var(--font-color--dark);
 }
