--- a/src/Layout/components/item/item.css
+++ b/src/Layout/components/item/item.css
@@ -16,12 +16,12 @@
   display: grid;
   grid-template-rows: repeat(2,auto);
 }
-
 .item-image {
   display: block;
   border-radius:  var(--border-radius);
   aspect-ratio: 1/1;
   width: 15rem;
+  margin: 0 auto;
 }
 
 .item-title {
@@ -43,18 +43,69 @@
   opacity:.80;
   filter: alpha(opacity=80);
 }
-.item__popup--content-box {
+.item__popup {
   display: none;
   position: absolute;
   top: 40%;
   left: 50%;
   padding: 16px;
-  background-color: white;
+  background-color: var(--div-color--light);
   z-index:1002;
   overflow: auto;
   border-radius: var(--border-radius);
   transform: translate(-50%, -50%);
+  color: var(--font-color--light);
+  box-shadow: 0 10px 25px 0 rgba(0, 0, 0, 0.1);
 }
-.item__popup--black-screen.active, .item__popup--content-box.active {
+.item__popup.dark {
+  background-color: var(--div-color--dark);
+  color: var(---font-color--dark);
+}
+.item__popup--black-screen.active, .item__popup.active {
   display: block;
+}
+.item__popup--close-button {
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  height: fit-content;
+  cursor: pointer;
+  position: relative;
+  border: 1px solid black;
+  background-color: var(--div-color--light);
+  color: var(--font-color--light);
+}
+.item__popup--close-button.dark {
+  border-color: white;
+  background-color: var(--bg-color--dark);
+  color: var(--font-color--dark);
+}
+
+.item__popup--grid {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+}
+.item__popup--info {
+  margin-left: .6rem;
+}
+.item__popup--info-top {
+  display: flex;
+  justify-content: space-between;
+}
+.item__popup--info-bottom {
+  display: flex;
+  justify-content: flex-end;
+}
+.item__popup--image {
+  display: block;
+  aspect-ratio: 1/1;
+  width: 25rem;
+  border-radius:  var(--border-radius);
+}
+.item__popup--title {
+  margin: 0;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+.item__popup--info > article {
+  margin-left: 1.5rem;
 }
