--- a/src/Layout/header/navbar/dropdown/navDropdown.css
+++ b/src/Layout/header/navbar/dropdown/navDropdown.css
@@ -14,11 +14,11 @@
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.1);
   opacity: 0;
   pointer-events: none;
-  color: var(--font-color--dark-light);
+  color: var(--font-color--dark);
 }
 .navbar__dropdown-menu.dark {
   background-color: var(--div-color--light);
-  color: var(--font-color--light-dark);
+  color: var(--font-color--light);
 }
 .navbar__dropdown-menu.active {
   opacity: 1;
