--- a/src/Layout/header/navbar/navbar.css
+++ b/src/Layout/header/navbar/navbar.css
@@ -18,24 +18,24 @@
 }
 .navbar__button:hover {
   background-color: var(--div-color--dark);
-  color: var(--font-color--dark-light);
+  color: var(--font-color--dark);
 }
 .navbar__button.active {
   border-radius: var(--border-radius) var(--border-radius) 0 0;
   background-color: var(--div-color--dark);
-  color: var(--font-color--dark-light);
+  color: var(--font-color--dark);
 }
 .navbar__button.dark {
-  color: var(--font-color--dark-light);
+  color: var(--font-color--dark);
 }
 .navbar__button.dark:hover {
   background-color: var(--div-color--light);
-  color: var(--font-color--light-dark);
+  color: var(--font-color--light);
 }
 .navbar__button.dark.active {
   border-radius: var(--border-radius) var(--border-radius) 0 0;
   background-color: var(--div-color--light);
-  color: var(--font-color--light-dark);
+  color: var(--font-color--light);
 }
 
 .navbar__dropdown-child--center {
@@ -48,7 +48,7 @@
   display: block;
   background: none;
   border: none;
-  color: var(--font-color--dark-light);
+  color: var(--font-color--dark);
   text-transform: capitalize;
   border-radius: var(--border-radius);
   margin: .1em 0;
@@ -57,12 +57,12 @@
 }
 .navbar__dropdown-button:hover {
   background-color: var(--div-color--light);
-  color: var(--font-color--light-dark);
+  color: var(--font-color--light);
 }
 .navbar__dropdown-button.dark {
-  color: var(--font-color--light-dark);
+  color: var(--font-color--light);
 }
 .navbar__dropdown-button.dark:hover {
-  color: var(--font-color--dark-light);
+  color: var(--font-color--dark);
   background-color: var(--bg-color--dark);
 }
