added cart page & display functionality

--- a/src/Layout/header/header.css
+++ b/src/Layout/header/header.css
@@ -14,7 +14,10 @@
   margin: 0;
 }
 
-.header__cart {
+.header__cart-button {
   margin: 0;
   padding: 0;
+  background: none;
+  border: none;
+  cursor: pointer;
 }
