Installed redux-persist and implemented it on lights & shoppingcart slices. Began layout for shopping cart items. Added types to multiple variables that had been untyped

--- a/src/Layout/header/header.css
+++ b/src/Layout/header/header.css
@@ -20,4 +20,8 @@
   background: none;
   border: none;
   cursor: pointer;
+  color: var(--font-color--light)
+}
+.header__cart-button.dark {
+  color: var(--font-color--dark)
 }
